--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortfolioUI_Web&Mobile</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <!-- header section -->
+
+      <section>
+        <div class="nav-header">
+          <span class="nav-item">
+            <a href="#">Works</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+          </span>
+        </div>
+
+        <div class="header">
+          <div class="header-left">
+            <h1>Hi, I am John, <br />Creative Technologist</h1>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet <br />sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam <br />consequat sunt nostrud amet.
+            </p>
+            <button class="btn-primary">Download Resume</button>
+          </div>
+
+          <div class="header-right">
+            <img src="image.png" alt="image" />
+          </div>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
