--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section>
         <div class="nav-header">
           <span class="nav-item">
-            <a href="#">Works</a>
+            <a href="work.html">Works</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
           </span>
