--- a/work.html
+++ b/work.html
@@ -4,67 +4,94 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work</title>
+    <link rel="stylesheet" href="work.css" />
   </head>
   <body>
-    <section class="feature_works">
-      <h2 class="section_title">Featured works</h2>
-
-      <!-- Single Work Block -->
-      <div class="feature_work_box">
-        <img class="work_image" src="image2.png" alt="Designing Dashboards" />
-        <div class="work_details">
-          <h3>Designing Dashboards</h3>
-          <div class="work_meta">
-            <span class="year_box">2020</span>
-            <span class="category">Dashboard</span>
-          </div>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
-          </p>
+    <div class="main-container">
+      <section class="feature_works">
+        <div class="nav-header">
+          <span class="nav-item">
+            <a href="#">Blog</a>
+            <a href="work.html">Works</a>
+            <a href="#">Contact</a>
+          </span>
         </div>
-      </div>
 
-      <div class="feature_work_box">
-        <img
-          src="image3.png"
-          alt="Vibrant Portraits of 2020"
-          class="work_image"
-        />
-        <div class="work_details">
-          <h3>Vibrant Portraits of 2020</h3>
-          <div class="work_meta">
-            <span class="year_box">2018</span>
-            <span class="category">Illustration</span>
-          </div>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
-          </p>
-        </div>
-      </div>
+        <h2 class="section_title">Work</h2>
 
-      <div class="feature_work_box">
-        <img
-          src="image4.png"
-          alt="36 Days of Malayalam type"
-          class="work_image"
-        />
-        <div class="work_details">
-          <h3>36 Days of Malayalam type</h3>
-          <div class="work_meta">
-            <span class="year_box">2018</span>
-            <span class="category">Typography</span>
+        <!-- Single Work Block -->
+        <div class="feature_work_box">
+          <img class="work_image" src="image2.png" alt="Designing Dashboards" />
+          <div class="work_details">
+            <h3>Designing Dashboards</h3>
+            <div class="work_meta">
+              <span class="year_box">2020</span>
+              <span class="category">Dashboard</span>
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
           </div>
-          <p>
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
-          </p>
         </div>
-      </div>
-    </section>
+
+        <div class="feature_work_box">
+          <img
+            src="image3.png"
+            alt="Vibrant Portraits of 2020"
+            class="work_image"
+          />
+          <div class="work_details">
+            <h3>Vibrant Portraits of 2020</h3>
+            <div class="work_meta">
+              <span class="year_box">2018</span>
+              <span class="category">Illustration</span>
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
+
+        <div class="feature_work_box">
+          <img
+            src="image4.png"
+            alt="36 Days of Malayalam type"
+            class="work_image"
+          />
+          <div class="work_details">
+            <h3>36 Days of Malayalam type</h3>
+            <div class="work_meta">
+              <span class="year_box">2018</span>
+              <span class="category">Typography</span>
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
+
+        <div class="feature_work_box">
+          <img src="image5.png" alt="Components" class="work_image" />
+          <div class="work_details">
+            <h3>Components</h3>
+            <div class="work_meta">
+              <span class="year_box">2018</span>
+              <span class="category">Components,Design</span>
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
