--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="main-container">
@@ -138,6 +145,20 @@
             </p>
           </div>
         </div>
+      </section>
+
+      <!-- Footer section -->
+      <section>
+        <footer class="foot">
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+
+          <p>Copyright © 2020 All rights reserved</p>
+        </footer>
       </section>
     </div>
   </body>
