--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav-header">
           <span class="nav-item">
             <a href="work.html">Works</a>
-            <a href="#">Blog</a>
+            <a href="Blog.html">Blog</a>
             <a href="#">Contact</a>
           </span>
         </div>
