--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
       <section class="feature_works">
         <div class="nav-header">
           <span class="nav-item">
-            <a href="#">Blog</a>
+            <a href="Blog.html">Blog</a>
             <a href="work.html">Works</a>
             <a href="#">Contact</a>
           </span>
