--- a/Blog.html
+++ b/Blog.html
@@ -17,10 +17,10 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
-    <div class="main-container">  
-      <!-- header section -->
 
+  <body>
+    <div class="main-container">
+      <!-- Header section -->
       <section>
         <div class="nav-header">
           <span class="nav-item">
@@ -29,7 +29,24 @@
             <a href="#">Contact</a>
           </span>
         </div>
-<h2 class="section_title">Blog</h2>
+
+        <h2 class="section_title">Blog</h2>
+
+        <!-- Blog Items -->
+        <div class="Blog_box">
+          <div class="Blog_details">
+            <h3>UI Interactions of the week</h3>
+            <div class="Blog_meta">
+              <span class="year_box">12 Feb 2019</span>
+              <span class="category">Express, Handlebars</span>
+            </div>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+          </div>
+        </div>
 
         <div class="Blog_box">
           <div class="Blog_details">
@@ -46,7 +63,6 @@
           </div>
         </div>
 
-
         <div class="Blog_box">
           <div class="Blog_details">
             <h3>UI Interactions of the week</h3>
@@ -62,7 +78,6 @@
           </div>
         </div>
 
-
         <div class="Blog_box">
           <div class="Blog_details">
             <h3>UI Interactions of the week</h3>
@@ -77,35 +92,21 @@
             </p>
           </div>
         </div>
+      </section>
 
-
-        <div class="Blog_box">
-          <div class="Blog_details">
-            <h3>UI Interactions of the week</h3>
-            <div class="Blog_meta">
-              <span class="year_box">12 Feb 2019</span>
-              <span class="category">Express, Handlebars</span>
-            </div>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
-            </p>
+      <!-- Footer section -->
+      <section>
+        <footer class="foot">
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           </div>
-        </div>
-    <!-- Footer section -->
-     <section>
-      <footer class="foot">
-        <div class="social-icons">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        </div>
 
-        <p>Copyright © 2020 All rights reserved</p>
-         </footer>
-     </section>
+          <p>Copyright © 2020 All rights reserved</p>
+        </footer>
+      </section>
     </div>
   </body>
 </html>
